strategies update